# AI-Interactive-portfolio-learning-platform

./: .gitignore  render.monorepo.yaml  render.yaml
apps/: README.md
career-simulator/: .dockerignore  .env.example  .env.production.example  CLERK-SETUP.md  DEPLOY-RUNBOOK.md  Dockerfile.api  FLY-DEPLOY.md  PHASE-1.md  PHASE-10.md  PHASE-11.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  PHASE-8.md  PHASE-9.md  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  render.yaml
current task/: task.toml
default-template/: task.toml
e2e/: .env.example  .gitignore  package.json  playwright.config.ts
portfolio-mentor-platform/: .env.example  DEPLOY.md  LAB-INFRA.md  QUICKSTART.md  README.md  SETUP-LAB-ENV.bat  START-PORTFOLIO.bat  deploy-vercel.ps1  (+3 more)
tasks/backup-retention-auditor/environment/auditor/: Cargo.toml
tasks/backup-retention-auditor/environment/auditor/src/: main.rs
tasks/spectral-density-estimator/environment/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md
tasks/spectral-density-estimator/environment/config/: analysis_params.json  peak_detection.json
tasks/spectral-density-estimator/environment/data/: example_output.json  sensor_timeseries.csv
tasks/spectral-density-estimator/environment/docs/: spectral_analysis.md  welch_method.md
tasks/spectral-density-estimator/environment/src/: csv_reader.cpp  csv_reader.h  fft.cpp  fft.h  json_writer.cpp  json_writer.h  main.cpp  peak_detect.cpp  peak_detect.h  statistics.cpp  statistics.h  types.h  welch.cpp  welch.h  window.cpp  window.h
(+9141 files in other folders)
