[package]
name = "auditor"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "auditor"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1.0.133", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
debug = false
strip = true
